Implement test for /user/{userId}/team/{teamId}/calendarEdit GET - Good Request(200). Fixes error related to the internal error in the calendarEdit endpoint. Deduplicated operationId and added components in openapi.yaml.
